# valid8

./: .gitignore  Cargo.toml  README.md  flake.nix  initial_valid8.json  valid8.json
.github/workflows/: release.yml
src/: config.rs  context.rs  main.rs
src/account/: clone.rs  edit.rs  mod.rs
src/commands/: compose.rs  edit.rs  init.rs  install.rs  ledger.rs  mod.rs  run.rs
src/common/: account_editor.rs  account_schema.rs  address_prompt.rs  helpers.rs  idl.rs  mod.rs  network.rs  project_name.rs  solcode.rs
src/program/: clone.rs  edit.rs
src/serialization/: b58.rs  b64.rs  mod.rs
