[package]
name = "valid8-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
bs58 = "0.5.0"
clap = { version = "4.4.8", features = ["derive", "cargo"] }
crossterm = "0.27.0"
dialoguer = "0.11.0"
hex = "0.4.3"
rayon = "1.8.0"
borsh = "1.3.1"
solana-program = "1.17.5"
solana-sdk = "1.17.5"
solana-client = "1.17.5"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
anchor-lang = { version = "0.29.0", features = ["idl-build"]}
flate2 = "1.0.28"
