[package]
name = "valid8-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
base64 = "0.22.0"
bs58 = "0.5.0"
clap = { version = "4.4.8", features = ["derive", "cargo"] }
crossterm = "0.27.0"
dialoguer = "0.11.0"
hex = "0.4.3"
rayon = "1.8.0"
borsh = "1.3.1"
solana-program = "1.17.5"
solana-sdk = "1.17.5"
solana-client = "1.17.5"
solana-program-test = "1.18.7"
solana-ledger = "1.18.7"
solana-runtime = "1.18.7"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
anchor-lang = { version = "0.29.0", features = ["idl-build"]}
flate2 = "1.0.28"
bincode = "1.3.3"
