[package]
name = "valid8"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
base64 = "0.22.0"
bs58 = "0.5.1"
clap = { version = "4.4.8", features = ["derive", "cargo"] }
# crossterm = "0.27.0"
dialoguer = "0.11.0"
# hex = "0.4.3"
rayon = "1.8.0"
borsh = "1.3.1"
# solana-program = "=1.18.1"
solana-sdk = "=1.18.1"
solana-client = "=1.18.1"
# solana-program-test = "=1.18.1"
solana-ledger = "=1.18.1"
solana-runtime = "=1.18.1"
# solana-test-validator = "=1.18.1"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
anchor-lang = { version = "0.29.0", features = ["idl-build"]}
flate2 = "1.0.28"
bincode = "1.3.3"
tempfile = "3.10.1"

[profile.dev.build-override]
opt-level = 3
